syntax = "proto3";
package lum.network.airdrop;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/lum-network/chain/x/airdrop/types";

enum Action {
  option (gogoproto.goproto_enum_prefix) = false;

  ACTION_VOTE = 0;
  ACTION_DELEGATE_STAKE = 1;
}

message ClaimRecord {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  repeated cosmos.base.v1beta1.Coin initial_claimable_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_claimable_amount\""
  ];

  repeated bool action_completed = 3
      [ (gogoproto.moretags) = "yaml:\"action_completed\"" ];
}