syntax = "proto3";
package lum.network.airdrop;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

import "lum/network/airdrop/claim.proto";
import "lum/network/airdrop/params.proto";

option go_package = "github.com/lum-network/chain/x/airdrop/types";

// GenesisState defines the airdrop module's genesis state.
message GenesisState {
  cosmos.base.v1beta1.Coin module_account_balance = 1 [
    (gogoproto.moretags) = "yaml:\"module_account_balance\"",
    (gogoproto.nullable) = false
  ];

  Params params = 2 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];

  repeated ClaimRecord claim_records = 3 [
    (gogoproto.moretags) = "yaml:\"claim_records\"",
    (gogoproto.nullable) = false
  ];
}
